<resources>
    <string name="app_name">Simple Accounting</string>
    <string name="date">Day</string>
    <string name="reference">Reference</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="balance">Balance</string>
    <string name="total">Total</string>
    <string name="loading">Loading...</string>
    <string name="showcase_main_title">Tap and hold to edit</string>
    <string name="showcase_example_ref">Supermarket</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="show_months">Show months</string>
    <string name="title_activity_temp_month">Months</string>
    <string name="previous_balance">Prev. balance</string>
    <string name="print">Print</string>
    <string name="nothing_to_print">There\'s nothing to print!</string>
    <string name="before">Before %s</string>
    <string name="before_update_1.2">Before</string>
    <string name="page">Page</string>

    <string name="currency">Currency</string>

    <string name="settings">Settings</string>
    <string name="pref_title_currency">Currencies</string>
    <string name="costumize_currencies">Costumize currencies</string>
    <string name="add_item">Add item</string>
    <string name="with_no_items_deactivated">No items, selector won\'t show</string>
    <string name="delete_data">Delete all tables using this currency?</string>
    <string name="delete">Delete</string>
    <string name="default_ext">Default</string>
    <string name="default_short">DFLT</string>
    <string name="version">Version</string>
    <string name="pref_title_invertcreditdebit">Invert credit and debit</string>
    <string name="pref_summary_invertcreditdebit">Credit and debit interchange places in table</string>
    <string name="item_hint">Set currency</string>
    <string name="bitcoin" translatable="false">Bitcoins</string>
    <string name="no_bitcoin_app">No bitcoin wallet app installed</string>
    <string name="graph">Graph</string>
    <string name="nothing_to_graph">Nothing to graph!</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_about">Feedback about %s</string>
    <string name="email" translatable="false">emmanuelbendavid@gmail.com</string>
    <string name="choose_email">Select email sender</string>
    <string name="mail_content">\n\n\nAndroid version: \nPhone model: </string>
    <string name="without_day_data_is_not_charted">Entires without day aren\'t graphed</string>

    <string name="libraries">Open source libraries</string>
    <string name="easier">These people made my job easier</string>
    <string name="simpleaccounting_description">Android app that helps you balance</string>
    <string name="license">License</string>

    <string name="patreon_dialog_title">We need you!</string>
    <string name="patreon_dialog_text">Would you enjoy a new feature?\nJust by pledging $1, you can! :)</string>
    <string name="patreon_username" translatable="false">EmmanuelMess</string>
    <string name="support_features">Support features</string>
    <string name="other_methods">Other methods</string>

    <string name="done">DONE</string>

    <string name="service_channel_name">Background work channel</string>

    <string name="migrating_database">Migrating database, you can close the app</string>
    <string name="migrating_notification_title">Migrating database</string>
    <string name="migration_service_description">Migration to Room database background service</string>
    <string name="migration_activity">Migrating...</string>
</resources>
