<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_currency"
        android:title="@string/currency"
        android:background="@color/colorPrimary"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_show_months"
        android:icon="@drawable/ic_web_asset_white_24dp"
        android:title="@string/show_months"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_graph"
        android:icon="@drawable/ic_show_chart_white_24dp"
        android:title="@string/graph"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_print"
        android:icon="@drawable/ic_print_white_24dp"
        android:title="@string/print"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_donate"
        android:title="@string/donate"
        app:showAsAction="never"/>

    <!-- Settings, should always be in the overflow-->
    <item android:id="@+id/action_settings"
          android:title="@string/settings"
          app:showAsAction="never"/>

</menu>