<?xml version="1.0" encoding="utf-8"?>

<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="10"
    android:stretchColumns="*"
    android:layout_below="@+id/textMonth">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/mainactivity_margin"
        android:layout_marginEnd="@dimen/mainactivity_margin"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/date"
            android:layout_column="0"
            android:text="@string/date"
            android:gravity="start"
            android:layout_weight="1"
            android:maxLines="1"
            android:textSize="@dimen/title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/ref"
            android:layout_column="1"
            android:text="@string/reference"
            android:gravity="center"
            android:layout_weight="3"
            android:maxLines="1"
            android:textSize="@dimen/title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/credit"
            android:layout_column="2"
            android:text="@string/credit"
            android:gravity="center"
            android:layout_weight="2"
            android:maxLines="1"
            android:textSize="@dimen/title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/debit"
            android:layout_column="3"
            android:text="@string/debit"
            android:gravity="center"
            android:layout_weight="2"
            android:maxLines="1"
            android:textSize="@dimen/title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/balance"
            android:layout_column="4"
            android:text="@string/balance"
            android:gravity="end"
            android:layout_weight="2"
            android:maxLines="1"
            android:textSize="@dimen/title"/>
    </TableRow>
</TableLayout>