<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.emmanuelmess.simpleaccounting.MainActivity"
    tools:showIn="@layout/activity_main"
    android:gravity="center_horizontal"
    android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/table"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/date"
                        android:layout_column="0"
                        android:text="@string/date"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/ref"
                        android:layout_column="1"
                        android:text="@string/reference"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/credit"
                        android:layout_column="2"
                        android:text="@string/credit"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/debit"
                        android:layout_column="3"
                        android:text="@string/debit"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/balance"
                        android:layout_column="4"
                        android:text="@string/balance"
                        android:gravity="center"/>
                </TableRow>
            </TableLayout>
            <android.support.v4.widget.Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/table"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>
</ScrollView>