<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_edit_fragment"
    android:clickable="true"
    android:focusable="true"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginEnd="@dimen/mainactivity_margin"
        android:layout_marginStart="@dimen/mainactivity_margin"
        android:background="@color/white"
        android:baselineAligned="false"
        android:clickable="true"
        android:focusable="true"
        android:weightSum="10"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <EditText
            android:id="@+id/editDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:hint="@string/date"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:maxLength="2"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/editRow"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editRef"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:hint="@string/reference"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/editRow"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editCredit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/credit"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal|numberSigned"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/editRow"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editDebit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/debit"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal|numberSigned"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/editRow"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textBalance"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:ems="3"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/editRow" />
    </LinearLayout>
</FrameLayout>
