<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:baselineAligned="false"
          android:weightSum="5">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/editDate"
        android:layout_column="0"
        android:hint="@string/date"
        android:inputType="date"
        android:imeOptions="actionNext"
        android:maxLength="2"
        android:singleLine="true"
        android:visibility="visible"
        android:layout_weight="1"
        android:gravity="left"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textDate"
        android:layout_column="0"
        android:singleLine="true"
        android:gravity="left|center_vertical"
        android:visibility="gone"
        android:layout_weight="1"
        android:ems="2"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/editRef"
        android:layout_column="1"
        android:hint="@string/reference"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:singleLine="true"
        android:gravity="center"
        android:visibility="visible"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textRef"
        android:layout_column="1"
        android:singleLine="true"
        android:gravity="center"
        android:visibility="gone"
        android:layout_weight="1"
        android:ems="4"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/editCredit"
        android:layout_column="2"
        android:hint="@string/credit"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:gravity="center"
        android:visibility="visible"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textCredit"
        android:layout_column="2"
        android:singleLine="true"
        android:gravity="center"
        android:visibility="gone"
        android:layout_weight="1"
        android:ems="3"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/editDebit"
        android:layout_column="3"
        android:hint="@string/debit"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:visibility="visible"
        android:layout_weight="1"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textDebit"
        android:layout_column="3"
        android:singleLine="true"
        android:gravity="center"
        android:visibility="gone"
        android:layout_weight="1"
        android:ems="3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textBalance"
        android:layout_column="4"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_weight="1"
        android:gravity="center_vertical|right"
        android:ems="3"/>
</TableRow>