<?xml version="1.0" encoding="utf-8"?>
<!-- As tested in API 10 the background in the Dialog Adapter is BLACK, so the text HAS to be WHITE -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="?dialogPreferredPadding"
              android:paddingEnd="?dialogPreferredPadding"
              android:paddingLeft="?dialogPreferredPadding"
              android:paddingRight="?dialogPreferredPadding"
              android:weightSum="1">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp">

        <EditText
            android:layout_height="match_parent"
            android:id="@+id/textDefault"
            android:layout_width="match_parent"
            android:inputType="text"
            android:textAlignment="gravity"
            android:gravity="center_vertical|start"
            android:background="@android:color/transparent"
            android:hint="@string/default_ext"
            android:textColor="@color/colorTextWhite"
            android:textColorHint="@color/colorTextHintWhite"/>

        <TextView
            android:layout_height="match_parent"
            android:id="@+id/textItemToDelete"
            android:layout_width="match_parent"
            android:textAlignment="gravity"
            android:gravity="center_vertical|start"
            android:background="@android:color/transparent"
            android:visibility="gone"
            android:textColor="@color/colorTextWhite"/>
    </RelativeLayout>

    <com.emmanuelmess.simpleaccounting.activities.views.LockableScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollerView"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/scrollView"/>
    </com.emmanuelmess.simpleaccounting.activities.views.LockableScrollView>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:id="@+id/add"
        android:clickable="true">

        <TextView
            android:text="@string/add_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAlignment="gravity"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/colorTextWhite"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:id="@+id/deleteConfirmation"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView">

            <Button
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deleteData"
                android:textSize="12sp"
                android:layout_weight="1"/>

            <Button
                android:text="@android:string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel"
                android:textSize="12sp"
                android:layout_weight="1"/>
        </LinearLayout>

        <TextView
            android:text="@string/delete_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:padding="5dp"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</LinearLayout>