<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55000000"
    tools:context="com.emmanuelmess.simpleaccounting.fragments.EditLedgerRowFragment">

    <com.emmanuelmess.simpleaccounting.activities.views.LedgerRow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?android:background">

        <EditText
            android:id="@+id/editDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_weight="1"
            android:gravity="start"
            android:hint="@string/date"
            android:imeOptions="actionNext"
            android:inputType="date"
            android:maxLength="2"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/normal"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_column="0"
            android:layout_weight="1"
            android:ems="2"
            android:gravity="start|center_vertical"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/normal"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editRef"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="3"
            android:gravity="center"
            android:hint="@string/reference"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/normal"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textRef"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_weight="3"
            android:ems="4"
            android:gravity="center"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/normal"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editCredit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/credit"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/normal"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textCredit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_column="2"
            android:layout_weight="2"
            android:ems="3"
            android:gravity="center"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/normal"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editDebit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/debit"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/normal"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textDebit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_column="3"
            android:layout_weight="2"
            android:ems="3"
            android:gravity="center"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/normal"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textBalance"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_column="4"
            android:layout_weight="2"
            android:ems="3"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/normal" />
    </com.emmanuelmess.simpleaccounting.activities.views.LedgerRow>
</android.support.constraint.ConstraintLayout>
